--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
         <ul>
@@ -39,7 +39,36 @@
         <img src="images/hardy.png" alt="parson" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-info-container">
+          <div class="about-info">
+            <p class="info-title">Name</p>
+            <p class="info-description">Mary Hardy</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Email</p>
+            <p class="info-description">info@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Date of birth:</p>
+            <p class="info-description">11 November 1987</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">From</p>
+            <p class="info-description">Los Angeles, USA</p>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
