--- a/index.html
+++ b/index.html
@@ -68,8 +68,179 @@
           </div>
         </div>
       </section>
+
+      <!-- What i do section -->
+      <section class="what-i-do">
+        <h3 class="section-title">What I Do</h3>
+        <p class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skills-container">
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <p class="skill-title">Vanilla JavaScript</p>
+            <p class="skill-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+              nobis tenetur asperiores placeat! Libero, eligendi.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <p class="skill-title">React</p>
+            <p class="skill-description">
+              Repudiandae consequuntur id sit neque nesciunt accusantium sunt
+              temporibus iste fugiat, quo nostrum, unde qui.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <p class="skill-title">Node.js</p>
+            <p class="skill-description">
+              Distinctio error, voluptas reprehenderit ducimus nostrum tempore
+              sapiente velit, alias labore cupiditate quis porro similique.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <p class="skill-title">MongoDB</p>
+            <p class="skill-description">
+              Accusamus cupiditate necessitatibus, sapiente dolorum culpa
+              ducimus sunt consectetur, voluptatum temporibus consequuntur ipsam
+              accusantium ea.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- resume section  -->
+
+      <section class="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-content">
+          <!-- My Eudcation section  -->
+
+          <div class="resume-title">
+            <h3>My Education</h3>
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Diploma in Computer Science</h4>
+              <h5 class="sub-title">Dhaka Polytechnic / 2016 - 2020</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Secondary School Certificate</h4>
+              <h5 class="sub-title">Dhaka high school / 2012 - 2016</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+
+          <!-- My experience section  -->
+
+          <div class="resume-title">
+            <h3>My Experience</h3>
+            <div class="resume-item">
+              <h4 class="title">Sr. Font End Developer</h4>
+              <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Jr. Font End Developer</h4>
+              <h5 class="sub-title">Dribbble Inc / 2018 - 2022</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">HTML Developer</h4>
+              <h5 class="sub-title">Adobe Inc / 2017 - 2018</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="resume-btn">
+          <button class="btn-primary">Download CV</button>
+        </div>
+      </section>
+
+      <!-- contact section  -->
+
+      <section class="contact">
+        <div>
+          <h3 class="section-title">Let's Connect</h3>
+          <p class="section-description">
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <a href="">
+            <img src="images/icons/facebook.png" alt="facebook">
+          </a>
+          <a href="">
+            <img src="images/icons/twitter.png" alt="twitter">
+          </a>
+          <a href="">
+            <img src="images/icons/insta.png" alt="insta">
+          </a>
+        </div>
+        <div>
+          <h3 class="section-title">Let’s Message me</h3>
+          <form action="">
+            <input type="text" name="" id="" placeholder="Your Name">
+            <input type="email" name="" id="" placeholder="Your Email">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+            <input class="btn-primary" type="submit" value="submit">
+          </form>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <!-- footer section start  -->
+
+    <footer>
+      <!-- <div class="footer-section">
+        <div class="left-side-footer">
+          <h2>Lets Connect</h2>
+          <p>
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+        </div>
+        <div class="right-side-footer">
+          <h2>Let’s Message me</h2>
+        </div>
+      </div> -->
+    </footer>
   </body>
 </html>
